force-app/main/default/objects/clariti__Gateway_Transaction__c/clariti__Gateway_Transaction__c.object-meta.xml
<CustomObject>
    <label>Gateway Transaction</label>
    <nameField>
        <displayFormat>GT-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gateway Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>