force-app/main/default/objects/clariti__Gateway_Transaction__c/fields/clariti__Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>clariti__Currency_Code__c</fullName>
    <label>Currency Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>