force-app/main/default/objects/clariti__Gateway_Transaction__c/fields/clariti__Last_Digits__c.field-meta.xml
<CustomField>
    <fullName>clariti__Last_Digits__c</fullName>
    <description>The last 4 digits of a card associated to the payment</description>
    <label>Last Digits</label>
    <length>4</length>
    <type>Text</type>
</CustomField>