force-app/main/default/objects/clariti__Gateway_Transaction__c/fields/clariti__Merchant_Id__c.field-meta.xml
<CustomField>
    <fullName>clariti__Merchant_Id__c</fullName>
    <externalId>true</externalId>
    <label>Merchant Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>