force-app/main/default/objects/clariti__Gateway_Transaction__c/fields/clariti__MerchantId__c.field-meta.xml
<CustomField>
    <fullName>clariti__MerchantId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Merchant Id</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>