force-app/main/default/objects/clariti__Gateway_Transaction__c/fields/clariti__Parent_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>clariti__Parent_Record_Id__c</fullName>
    <label>Parent Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>