force-app/main/default/objects/clariti__Gateway_Transaction__c/fields/clariti__Processor_Amount__c.field-meta.xml
<CustomField>
    <fullName>clariti__Processor_Amount__c</fullName>
    <description>The amount value that was set to the Payment Processor API without decimals</description>
    <inlineHelpText>The amount value that was set to the Payment Processor API without decimals</inlineHelpText>
    <label>Processor Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>