force-app/main/default/objects/clariti__Gateway_Transaction__c/fields/clariti__Processor_Available_to_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>clariti__Processor_Available_to_Refund_Amount__c</fullName>
    <description>The available payment processor amount to be refunded without decimals</description>
    <inlineHelpText>The available payment processor amount to be refunded without decimals</inlineHelpText>
    <label>Processor Available to Refund Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>