force-app/main/default/objects/clariti__Gateway_Transaction__c/fields/clariti__Processor_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>clariti__Processor_Transaction_Id__c</fullName>
    <externalId>true</externalId>
    <label>Processor Transaction Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>