force-app/main/default/objects/clariti__Gateway_Transaction__c/fields/clariti__Type__c.field-meta.xml
<CustomField>
    <fullName>clariti__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>DirectDebit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>