force-app/main/default/objects/clariti__Gateway_Transaction__c/listViews/clariti__All.listView-meta.xml
<ListView>
    <fullName>clariti__All</fullName>
    <columns>NAME</columns>
    <columns>clariti__Status__c</columns>
    <columns>clariti__Type__c</columns>
    <columns>clariti__Processor_Transaction_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>